# routes/web.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\SchoolController;
+use App\Http\Controllers\StudentController;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/', function () {
@@ -14,3 +15,12 @@ Route::get('/schools/{id}', [SchoolController::class, 'show']);
 Route::get('/schools/{id}/edit', [SchoolController::class, 'edit']);
 Route::put('/schools/{id}', [SchoolController::class, 'update']);
 Route::delete('/schools/{id}', [SchoolController::class, 'destroy']);
+
+Route::get('/students', [StudentController::class, 'index']);
+Route::get('/students/create', [StudentController::class, 'create']);
+Route::post('/students', [StudentController::class, 'store']);
+Route::get('/students/{id}', [StudentController::class, 'show']);
+Route::get('/students/{id}/edit', [StudentController::class, 'edit']);
+Route::put('/students/{id}', [StudentController::class, 'update']);
+Route::delete('/students/{id}', [StudentController::class, 'destroy']);
+// Route::resource('students', [StudentController::class]);
